# matrix

./: CMakeLists.txt  README.txt
include/: cg.h  gmres.h  lsqr.h  matrix_ops.h  qr.h  solvers.h
src/: cg.c  gmres.c  lsqr.c  matrix_ops.c  qr.c
tests/: test_cg.c  test_gmres.c  test_lsqr.c  test_matrix_ops.c  test_qr.c
